--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    dependencies {
-        classpath 'com.google.gms:google-services:4.4.1'
-    }
-}
+//buildscript {
+//    dependencies {
+//        classpath 'com.google.gms:google-services:4.4.1'
+//    }
+//}
 
 plugins {
     id 'com.android.application' version '8.1.4' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
-    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'com.google.dagger.hilt.android' version '2.48.1' apply false
 }
