--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleChaseRun"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${apiKey}" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
